packages/bff-wasm/fixtures/errors/complex-path-param/app.ts
type B = { c: string };
type A = {
  a: B;
};

export default {
  [`/hello/{id}`]: { get: async (id: A): Promise<string> => `Hello ${id}!` },
};
